--- a/index.html
+++ b/index.html
@@ -1155,6 +1155,13 @@
                 </a>
             </div>
         </div>
+        
+        <!-- Visitor Counter -->
+        <div class="visitor-counter">
+            <i class="fas fa-eye"></i>
+            <span id="visitor-count">Loading...</span>
+            <span class="counter-label">Total Visitors</span>
+        </div>
     </section>
 
     <!-- Scripts -->
