Add proper spacing for visitor counter in mobile view

--- a/card.html
+++ b/card.html
@@ -191,11 +191,11 @@
                     <div class="card-back">
                         <div class="qr-section">
                             <div class="qr-code-container">
-                                <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://smapurbo.netlify.app" alt="Portfolio QR Code" class="qr-code">
+                                <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://smapurbo.me" alt="Portfolio QR Code" class="qr-code">
                             </div>
                             <div class="qr-text">
                                 <h4>Scan for Portfolio</h4>
-                                <p>smapurbo.netlify.app</p>
+                                <p>smapurbo.me</p>
                             </div>
                             
                             <div class="social-section">
